# billet-fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG_BULK_OPERATIONS.md  Dockerfile  Makefile  README.md  README_DOCKER.md  README_EXCEPTIONS_SYSTEM.md  TESTING_PLAN.md  USERS_AUTH_IMPLEMENTATION_PLAN.md  alembic.ini  conftest.py  coverage.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker.env.example  pyproject.toml  telegram.env.example  websocket.env.example
.cursor/rules/: fastapi-route-specific-rules.mdc  fastapi.mdc  main.mdc  performance-optimization-rules.mdc
autogen/: __init__.py  __main__.py  utils.py
autogen/cli/: __init__.py  init.py  interactive.py  list.py  main.py  migrate.py  start.py  tests.py  validate.py
autogen/core/: __init__.py  generators.py  validators.py
autogen/templates/v1/: version.toml
backups/migrations/: backup_20250613_124959_before_migrate_to_head.json
config/nginx/: nginx.conf
config/rabbitmq/: enabled_plugins  rabbitmq.conf
docs/: ALEMBIC_MIGRATION.md  APPS_STRUCTURE.md  ARCHITECTURE_IMPROVEMENTS.md  CONFIGURATION_MIGRATION.md  DATABASE_AUTO_CREATE.md  E2E_TESTING_GUIDE.md  ENV_VARIABLES.md  FASTSTREAM_RABBITMQ.md  MIGRATION_IMPROVEMENTS.md  PRE_COMMIT_GUIDE.md  PRE_COMMIT_RECOMMENDATIONS.md  README.md  README_messaging.md  README_stream.md  README_tests.md  REALTIME_BINARY_WEBRTC.md  REFACTORING_ANALYSIS.md  app_generator_plan.md  authentication_guide.md  autogen_cli_user_guide.md  autogen_implementation_summary.md  code_review_checklist.md  docstring_templates.md  inter_app_imports_linter.md  interfaces_guide.md  pre_commit_cleanup.md  project_cleanup.md  repository_advanced_guide.md  repository_bulk_operations.md  repository_mixins_guide.md  taskiq.md  telegram-bots.md  url_for_examples.md  websocket-sse.md
docs/testing/: README.md  data_factories.md  improvements.md  improvements_summary.md  isolation_decorators.md  migrations_fixture.md  test-structure.md
examples/: README.md  auth_endpoints_examples.py  auth_examples.py  auth_simple_examples.py  bulk_operations_demo.py  database_examples.py  integration_examples.py  messaging_examples.py  realtime_examples.py  repository_advanced_features.py  websocket_examples.py
migrations/: env.py
migrations/versions/: 0001_38e17bc878df_create_users_tables.py  0002_5c6680c6b417_create_auth_tables.py  bd794658ed21_initial_migration.py
notebooks/: .gitignore  README.md  requirements-notebooks.txt
notebooks/auth/: 01_user_registration.ipynb
notebooks/quickstart/: 01_project_overview.ipynb
scripts/: check_architecture.py  check_coverage.sh  check_docstring_language.py  check_duplication.py  check_structure.py  check_todos.sh  cleanup_project.py  enhanced_docs_linter.py  exceptions_isolation_linter.py  inter_app_imports_linter.py  migration_cli.py  validate_openapi.sh  warm_docker_cache.py
scripts/postgres/: dev-init.sql
src/: __init__.py  cli.py  constants.py  main.py
src/apps/: __init__.py  api_router.py
src/apps/auth/: __init__.py  auth_service.py  dependencies.py  domain.py  exceptions.py  interfaces.py  jwt_service.py  models.py  password_service.py  routes.py  schemas.py
src/apps/base/: __init__.py  contracts.py  events.py  models.py  repository.py
src/apps/test_advanced/: README.md  __init__.py  app_config.toml  exceptions.py
src/apps/test_enterprise/: README.md  __init__.py  app_config.toml
src/apps/test_modern_syntax/: README.md  __init__.py  app_config.toml  exceptions.py  health.py
src/apps/test_products/: README.md  __init__.py  app_config.toml  exceptions.py
src/apps/test_static_schemas/: README.md  __init__.py  app_config.toml  exceptions.py  health.py
src/apps/users/: __init__.py  application.py  domain.py  exceptions.py  interfaces.py  models.py  repository.py  routes.py  schemas.py  service.py
src/core/: __init__.py  config.py  database.py  enums.py  interfaces.py  routes.py  taskiq_client.py  tasks.py  telemetry.py
src/core/base/: __init__.py  models.py
src/core/exceptions/: __init__.py  base.py  core_base.py  handlers.py  middleware.py  notifications.py
src/core/messaging/: __init__.py  broker.py  client.py  core.py  example.py  fastapi_integration.py  handlers.py  models.py
src/core/migrations/: __init__.py  database.py  exceptions.py  monitor.py
src/core/realtime/: __init__.py  auth.py  connection_manager.py  models.py
src/core/streaming/: __init__.py  auth.py  connection_manager.py  sse_client.py  sse_routes.py  ws_client.py  ws_models.py  ws_routes.py
src/core/telegram/: __init__.py  config.py  decorators.py  manager.py  templates.py
src/examples/: interfaces_usage.py
src/tools/: migrations.py  pydantic.py
tests/: conftest.py  conftest_logging.py  conftest_old.py  demo_auth_test.py  examples.md  simple_test.py  test_basic.py  test_examples.py  test_factories.py  test_isolated.py  test_mock_system_demo.py  test_simple_mock_demo.py  test_unified_style.py
tests/_core/: test_config.py  test_simple.py
tests/apps/: __init__.py  conftest.py
tests/core/: test_config.py  test_main.py
tests/e2e/: __init__.py  conftest.py  test_e2e_auto_generated.py  test_e2e_extended.py  test_e2e_extended_coverage.py  test_e2e_final.py  test_e2e_manual_comprehensive.py  test_e2e_real_routes.py  test_user_auth_flow.py  utils.py
tests/factories/: __init__.py  auth_factories.py  auth_factory.py  base_factories.py  data_factories.py  message_factory.py  test_user_factory.py  user_factories.py  user_factory.py  user_factory_old.py
tests/mocking/: __init__.py  external_api_mocks.py  telegram_mocks.py
tests/performance/: __init__.py  benchmarks.py  load_tests.py
tests/tools/: test_class_finder.py
tests/utils_test/: ADVANCED_FEATURES.md  LOGGING_GUIDE.md  LOGGING_SUMMARY.md  NEW_FEATURES_OVERVIEW.md  README.md  advanced_features_examples.py  api_test_client.py  enhanced_client_integration.py  isolation_decorators.py  logging_config.py  mock_system.py  simple_isolation_test.py  test_client_examples.py  test_isolation_decorators_example.py  test_logging_example.py
(+232 files in other folders)
